--- a/dbt/profiles.yml
+++ b/dbt/profiles.yml
@@ -8,8 +8,7 @@ nsw_doe_data_stack_in_a_box_profile:
       threads: 4
     prod:
       type: duckdb
-      path: "../{{ env_var('NSW_DOE_DATA_STACK_IN_A_BOX_DB_PATH__PROD') }}"
-      database: "{{ env_var('NSW_DOE_DATA_STACK_IN_A_BOX_DB_NAME__PROD') }}"
+      path: "md:{{ env_var('NSW_DOE_DATA_STACK_IN_A_BOX_DB_NAME__PROD') }}"
       schema: "{{ env_var('NSW_DOE_DATA_STACK_IN_A_BOX_TARGET_SCHEMA__PROD') }}"
       threads: 4
   target: "{{ env_var('NSW_DOE_DATA_STACK_IN_A_BOX__ENV') }}"
