--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -28,28 +28,29 @@
         "terminal.integrated.defaultProfile.linux": "zsh"
       },
       "extensions": [
-		"GitHub.codespaces",
-		"GitHub.vscode-pull-request-github",
-		"esbenp.prettier-vscode",
-		"ms-python.python",
-		"ms-python.vscode-pylance",
-		"ms-python.black-formatter",
-		"ms-python.isort",
-		"charliermarsh.ruff",
-		"redhat.vscode-yaml",
-		"samuelcolvin.jinjahtml",
-		"bungcip.better-toml",
-		"tamasfe.even-better-toml",
-		"dorzey.vscode-sqlfluff",
-		"mechatroner.rainbow-csv",
-		"evidence.evidence-vscode",
-		"svelte.svelte-vscode",
-		"GitHub.copilot",
-		"GitHub.copilot-labs",
-		"innoverio.vscode-dbt-power-user",
-		"bastienboutonnet.vscode-dbt",
-		"eamodio.gitlens"
-	]
+        "GitHub.codespaces",
+        "GitHub.vscode-pull-request-github",
+        "esbenp.prettier-vscode",
+        "ms-python.python",
+        "ms-python.vscode-pylance",
+        "ms-python.black-formatter",
+        "ms-python.isort",
+        "charliermarsh.ruff",
+        "redhat.vscode-yaml",
+        "samuelcolvin.jinjahtml",
+        "bungcip.better-toml",
+        "tamasfe.even-better-toml",
+        "dorzey.vscode-sqlfluff",
+        "mechatroner.rainbow-csv",
+        "evidence.evidence-vscode",
+        "svelte.svelte-vscode",
+        "GitHub.copilot",
+        "GitHub.copilot-labs",
+        "innoverio.vscode-dbt-power-user",
+        "bastienboutonnet.vscode-dbt",
+        "eamodio.gitlens",
+        "Evidence.sqltools-duckdb-driver"
+      ]
     }
   }
 }
