--- a/requirements.in
+++ b/requirements.in
@@ -6,3 +6,6 @@ duckdb==0.9.2 #currently supported duckdb version for motherduck
 dagster-dbt
 dagster-duckdb
 dagster-duckdb-pandas
+
+
+duckdb-async
