--- a/Taskfile.yml
+++ b/Taskfile.yml
@@ -4,7 +4,7 @@ tasks:
   temp_limitation:
     cmds: 
       - bash -c 'if [ -d "./models/semantic_models" ]; then mv ./models/semantic_models ./semantic_models_removed_see_dagster_limitation/; else echo "No, the semantic_models folder does not exist."; fi'
-      - rm ./target -r
+      - bash -c 'if [ -d "./target" ]; then rm ./target -r; else echo "No, the targets folder does not exist."; fi'
   temp_limitation_undo:
     cmds: 
       - bash -c 'if [ -d "./semantic_models_removed_see_dagster_limitation" ]; then mv ./semantic_models_removed_see_dagster_limitation/ ./models/semantic_models; else echo "No, the semantic_models folder does not exist."; fi'
@@ -15,8 +15,15 @@ tasks:
       # - uv venv  # Create a virtual environment at .venv. # limitation cant create venv with make file due to limitation: ask runs as a subprocess of your current shell, so it can't change the environment of the shell that started it. 
       # - source .venv/bin/activate
       # - uv pip install -r requirements.txt
-      - uv pip sync requirements.txt 
+      # - uv pip sync requirements.txt 
       # - python -m pip install --progress-bar off -r requirements.txt
+      - pip install -r requirements.txt 
+      - cd dbt && dbt deps
+  python_deps_devcontainer:
+    desc: Limitation with taskfile cant use vertial envs. So cant use UV
+    cmds:
+      - python3 -m pip install uv
+      - pip install -r requirements.txt 
       - cd dbt && dbt deps
       
   git:
@@ -36,6 +43,17 @@ tasks:
       - zsh -i -c "znap source marlonrichert/zsh-autocomplete"
 
   setup:
+    cmds:
+      - task temp_limitation
+      - task python_deps_devcontainer
+      - task git
+      # - task znap # already exists in devcontainer
+      - task zsh_plugins
+      - task orchestration_setup_devcontainer
+      # - task airbyte
+      # - task octavia_setup
+
+  setup_local:
     cmds:
       - task temp_limitation
       - task python_deps
@@ -78,9 +96,9 @@ tasks:
     cmds:
       - dbt docs serve
 
-  dag_remote:
+  dag_remote_devcontainer:
     cmds:
-      - cd orchestration && DAGSTER_DBT_PARSE_PROJECT_ON_LOAD=1 && export DAGSTER_HOME="/workspaces/nsw-doe-data-stack-in-a-box/orchestration/dagster-local-file-store" && DA dagster dev
+      - cd orchestration && DAGSTER_DBT_PARSE_PROJECT_ON_LOAD=1 && export DAGSTER_HOME="/workspaces/nsw-doe-data-stack-in-a-box/orchestration/dagster-local-file-store/"$NSW_DOE_DATA_STACK_IN_A_BOX__ENV && dagster dev
   dag:
     desc: limitation DAGSTER_HOME cant be dynamic 🥹
     cmds:
@@ -88,6 +106,9 @@ tasks:
   orchestration_setup:
     cmds:
       - cd orchestration && uv pip install -e ".[dev]"
+  orchestration_setup_devcontainer:
+    cmds:
+      - cd orchestration && pip install -e ".[dev]"
   dag_server:
     cmds:
       - cd orchestration && dagster dev -h 0.0.0.0 -p 3000
