--- a/requirements.in
+++ b/requirements.in
@@ -1,11 +1,11 @@
 dbt-duckdb
 
+dagster-webserver
+ipykernel
+
 duckdb==0.9.2 #currently supported duckdb version for motherduck
 
 # dagster deps
 dagster-dbt
 dagster-duckdb
 dagster-duckdb-pandas
-
-
-duckdb-async
