--- a/requirements.txt
+++ b/requirements.txt
@@ -4,14 +4,25 @@ agate==1.7.1
     # via dbt-core
 alembic==1.13.1
     # via dagster
+aniso8601==9.0.1
+    # via graphene
 annotated-types==0.6.0
     # via pydantic
+anyio==4.3.0
+    # via
+    #   gql
+    #   starlette
+    #   watchfiles
+asttokens==2.4.1
+    # via stack-data
 attrs==23.2.0
     # via
     #   jsonschema
     #   referencing
 babel==2.14.0
     # via agate
+backoff==2.2.1
+    # via gql
 certifi==2024.2.2
     # via requests
 cffi==1.16.0
@@ -21,26 +32,35 @@ charset-normalizer==3.3.2
 click==8.1.7
     # via
     #   dagster
+    #   dagster-webserver
     #   dbt-core
     #   dbt-semantic-interfaces
     #   typer
+    #   uvicorn
 colorama==0.4.6
     # via dbt-core
 coloredlogs==14.0
     # via dagster
+comm==0.2.2
+    # via ipykernel
 croniter==2.0.2
     # via dagster
-dagster==1.6.9
+dagster==1.6.11
     # via
     #   dagster-dbt
     #   dagster-duckdb
     #   dagster-duckdb-pandas
-dagster-dbt==0.22.9
-dagster-duckdb==0.22.9
+    #   dagster-graphql
+    #   dagster-webserver
+dagster-dbt==0.22.11
+dagster-duckdb==0.22.11
     # via dagster-duckdb-pandas
-dagster-duckdb-pandas==0.22.9
-dagster-pipes==1.6.9
+dagster-duckdb-pandas==0.22.11
+dagster-graphql==1.6.11
+    # via dagster-webserver
+dagster-pipes==1.6.11
     # via dagster
+dagster-webserver==1.6.11
 dbt-core==1.7.9
     # via
     #   dagster-dbt
@@ -50,14 +70,31 @@ dbt-extractor==0.5.1
     # via dbt-core
 dbt-semantic-interfaces==0.4.4
     # via dbt-core
+debugpy==1.8.1
+    # via ipykernel
+decorator==5.1.1
+    # via ipython
 docstring-parser==0.15
     # via dagster
 duckdb==0.9.2
     # via
     #   dagster-duckdb
     #   dbt-duckdb
+executing==2.0.1
+    # via stack-data
 fsspec==2024.2.0
     # via universal-pathlib
+gql==3.5.0
+    # via dagster-graphql
+graphene==3.3
+    # via dagster-graphql
+graphql-core==3.2.3
+    # via
+    #   gql
+    #   graphene
+    #   graphql-relay
+graphql-relay==3.2.0
+    # via graphene
 greenlet==3.0.3
     # via sqlalchemy
 grpcio==1.62.1
@@ -66,18 +103,29 @@ grpcio==1.62.1
     #   grpcio-health-checking
 grpcio-health-checking==1.62.1
     # via dagster
+h11==0.14.0
+    # via uvicorn
+httptools==0.6.1
+    # via uvicorn
 humanfriendly==10.0
     # via coloredlogs
 idna==3.6
     # via
+    #   anyio
     #   dbt-core
     #   requests
+    #   yarl
 importlib-metadata==6.11.0
     # via dbt-semantic-interfaces
+ipykernel==6.29.3
+ipython==8.22.2
+    # via ipykernel
 isodate==0.6.1
     # via
     #   agate
     #   dbt-core
+jedi==0.19.1
+    # via ipython
 jinja2==3.1.3
     # via
     #   dagster
@@ -90,6 +138,12 @@ jsonschema==4.21.1
     #   dbt-semantic-interfaces
 jsonschema-specifications==2023.12.1
     # via jsonschema
+jupyter-client==8.6.1
+    # via ipykernel
+jupyter-core==5.7.2
+    # via
+    #   ipykernel
+    #   jupyter-client
 leather==0.4.0
     # via agate
 logbook==1.5.3
@@ -104,6 +158,10 @@ markupsafe==2.1.5
     #   mako
 mashumaro==3.12
     # via dbt-core
+matplotlib-inline==0.1.6
+    # via
+    #   ipykernel
+    #   ipython
 mdurl==0.1.2
     # via markdown-it-py
 minimal-snowplow-tracker==0.0.2
@@ -112,6 +170,10 @@ more-itertools==10.2.0
     # via dbt-semantic-interfaces
 msgpack==1.0.8
     # via mashumaro
+multidict==6.0.5
+    # via yarl
+nest-asyncio==1.6.0
+    # via ipykernel
 networkx==3.2.1
     # via
     #   dagster-dbt
@@ -125,19 +187,34 @@ packaging==24.0
     #   dagster
     #   dagster-dbt
     #   dbt-core
+    #   ipykernel
 pandas==2.0.3
     # via dagster-duckdb-pandas
 parsedatetime==2.6
     # via agate
+parso==0.8.3
+    # via jedi
 pathspec==0.11.2
     # via dbt-core
 pendulum==3.0.0
     # via dagster
+pexpect==4.9.0
+    # via ipython
+platformdirs==4.2.0
+    # via jupyter-core
+prompt-toolkit==3.0.43
+    # via ipython
 protobuf==4.25.3
     # via
     #   dagster
     #   dbt-core
     #   grpcio-health-checking
+psutil==5.9.8
+    # via ipykernel
+ptyprocess==0.7.0
+    # via pexpect
+pure-eval==0.2.2
+    # via stack-data
 pycparser==2.21
     # via cffi
 pydantic==2.6.4
@@ -147,17 +224,22 @@ pydantic==2.6.4
 pydantic-core==2.16.3
     # via pydantic
 pygments==2.17.2
-    # via rich
+    # via
+    #   ipython
+    #   rich
 python-dateutil==2.9.0.post0
     # via
     #   croniter
     #   dagster
     #   dbt-semantic-interfaces
+    #   jupyter-client
     #   pandas
     #   pendulum
     #   time-machine
 python-dotenv==1.0.1
-    # via dagster
+    # via
+    #   dagster
+    #   uvicorn
 python-slugify==8.0.4
     # via agate
 pytimeparse==1.1.8
@@ -173,6 +255,11 @@ pyyaml==6.0.1
     #   dagster
     #   dbt-core
     #   dbt-semantic-interfaces
+    #   uvicorn
+pyzmq==25.1.2
+    # via
+    #   ipykernel
+    #   jupyter-client
 referencing==0.33.0
     # via
     #   jsonschema
@@ -181,8 +268,13 @@ requests==2.31.0
     # via
     #   dagster
     #   dagster-dbt
+    #   dagster-graphql
     #   dbt-core
+    #   gql
     #   minimal-snowplow-tracker
+    #   requests-toolbelt
+requests-toolbelt==1.0.0
+    # via gql
 rich==13.7.1
     # via
     #   dagster
@@ -195,15 +287,24 @@ setuptools==69.2.0
     # via dagster
 six==1.16.0
     # via
+    #   asttokens
     #   isodate
     #   minimal-snowplow-tracker
     #   python-dateutil
+sniffio==1.3.1
+    # via anyio
 sqlalchemy==2.0.28
     # via
     #   alembic
     #   dagster
 sqlparse==0.4.4
     # via dbt-core
+stack-data==0.6.3
+    # via ipython
+starlette==0.37.2
+    # via
+    #   dagster-graphql
+    #   dagster-webserver
 structlog==24.1.0
     # via dagster
 tabulate==0.9.0
@@ -216,8 +317,20 @@ tomli==2.0.1
     # via dagster
 toposort==1.10
     # via dagster
+tornado==6.4
+    # via
+    #   ipykernel
+    #   jupyter-client
 tqdm==4.66.2
     # via dagster
+traitlets==5.14.2
+    # via
+    #   comm
+    #   ipykernel
+    #   ipython
+    #   jupyter-client
+    #   jupyter-core
+    #   matplotlib-inline
 typer==0.9.0
     # via dagster-dbt
 typing-extensions==4.10.0
@@ -241,7 +354,19 @@ urllib3==1.26.18
     # via
     #   dbt-core
     #   requests
+uvicorn==0.28.0
+    # via dagster-webserver
+uvloop==0.19.0
+    # via uvicorn
 watchdog==4.0.0
     # via dagster
+watchfiles==0.21.0
+    # via uvicorn
+wcwidth==0.2.13
+    # via prompt-toolkit
+websockets==12.0
+    # via uvicorn
+yarl==1.9.4
+    # via gql
 zipp==3.18.0
     # via importlib-metadata
