--- a/.env
+++ b/.env
@@ -1,7 +1,7 @@
 # dont store any secrets in this .env file!!! its on github!!!
 
-# dev || prod
-NSW_DOE_DATA_STACK_IN_A_BOX__ENV="dev"
+# dev || prod # dont put quotes around this. As its being used in dbt jinja its not removing quotes properly
+NSW_DOE_DATA_STACK_IN_A_BOX__ENV=dev
 
 NSW_DOE_DATA_STACK_IN_A_BOX_DB_PATH__DEV="/reports/nsw_doe_data_stack_in_a_box__dev.duckdb"
 NSW_DOE_DATA_STACK_IN_A_BOX_DB_NAME__DEV="nsw_doe_data_stack_in_a_box__dev"
