fixing env for devcontainer

--- a/.env
+++ b/.env
@@ -3,10 +3,10 @@
 # dev || prod # dont put quotes around this. As its being used in dbt jinja its not removing quotes properly
 NSW_DOE_DATA_STACK_IN_A_BOX__ENV=dev
 
-NSW_DOE_DATA_STACK_IN_A_BOX_DB_PATH__DEV="/reports/nsw_doe_data_stack_in_a_box__dev.duckdb"
+NSW_DOE_DATA_STACK_IN_A_BOX_DB_PATH__DEV=/reports/nsw_doe_data_stack_in_a_box__dev.duckdb
 NSW_DOE_DATA_STACK_IN_A_BOX_DB_NAME__DEV=nsw_doe_data_stack_in_a_box__dev
-NSW_DOE_DATA_STACK_IN_A_BOX_TARGET_SCHEMA__DEV="analytics"
+NSW_DOE_DATA_STACK_IN_A_BOX_TARGET_SCHEMA__DEV=analytics
 
-NSW_DOE_DATA_STACK_IN_A_BOX_DB_PATH__PROD="" # not needed "/reports/nsw_doe_data_stack_in_a_box__prod.duckdb"
+NSW_DOE_DATA_STACK_IN_A_BOX_DB_PATH__PROD= # not needed "/reports/nsw_doe_data_stack_in_a_box__prod.duckdb"
 NSW_DOE_DATA_STACK_IN_A_BOX_DB_NAME__PROD=nsw_doe_data_stack_in_a_box__prod
-NSW_DOE_DATA_STACK_IN_A_BOX_TARGET_SCHEMA__PROD="analytics"
+NSW_DOE_DATA_STACK_IN_A_BOX_TARGET_SCHEMA__PROD=analytics
