--- a/Taskfile.yml
+++ b/Taskfile.yml
@@ -69,7 +69,6 @@ tasks:
       - task znap
       - task zsh_plugins
       - task orchestration_setup
-      - task dag_remote_devcontainer
       # - task airbyte
       # - task octavia_setup
   
@@ -105,10 +104,10 @@ tasks:
     cmds:
       - dbt docs serve
 
-  dag_remote_devcontainer:
+  dag:
     cmds:
       - cd orchestration && DAGSTER_DBT_PARSE_PROJECT_ON_LOAD=1 && export DAGSTER_HOME="/workspaces/nsw-doe-data-stack-in-a-box/orchestration/dagster-local-file-store/"$NSW_DOE_DATA_STACK_IN_A_BOX__ENV && dagster dev
-  dag:
+  dag_local:
     desc: limitation DAGSTER_HOME cant be dynamic 🥹
     cmds:
       - cd orchestration && DAGSTER_DBT_PARSE_PROJECT_ON_LOAD=1 && export DAGSTER_HOME="/home/dave/data-engineering/nsw-doe-data-stack-in-a-box/orchestration/dagster-local-file-store/"$NSW_DOE_DATA_STACK_IN_A_BOX__ENV  && dagster dev
