--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -13,7 +13,7 @@
   },
   // Use 'postCreateCommand' to run commands after the container is created.
 	"postCreateCommand": "task setup",
-  "postStartCommand": "task dag_remote_devcontainer",
+  "postStartCommand": "task dag",
   "runArgs": [
     "--env-file", "${localWorkspaceFolder}/.env"
     ],
@@ -53,7 +53,8 @@
         "innoverio.vscode-dbt-power-user",
         "bastienboutonnet.vscode-dbt",
         "eamodio.gitlens",
-        "Evidence.sqltools-duckdb-driver"
+        "Evidence.sqltools-duckdb-driver",
+        "ms-toolsai.jupyter"
       ]
     }
   }
