--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -5,15 +5,15 @@
     "ghcr.io/devcontainers-contrib/features/black:1": {},
     "ghcr.io/devcontainers/features/node:1": {},
 	"ghcr.io/devcontainers/features/docker-in-docker:2": {"moby":false},
-	// "ghcr.io/eitsupi/devcontainer-features/duckdb-cli:1": {
-	// 	// "version": "0.8.1",
-	// 	"extensions": "parquet"
-	// },
+	"ghcr.io/eitsupi/devcontainer-features/duckdb-cli:1": {
+		// "version": "0.9.2",
+		"extensions": "parquet"
+	},
 	"ghcr.io/eitsupi/devcontainer-features/go-task:1": {}
   },
   // Use 'postCreateCommand' to run commands after the container is created.
 	"postCreateCommand": "task setup",
-  "postStartCommand": "task dag",
+  "postStartCommand": "task dag", // TODO will this mean the codesandbox stays open?
   "runArgs": [
     "--env-file", "${localWorkspaceFolder}/.env"
     ],
@@ -26,6 +26,13 @@
 		// "FILENAME": "jaffle_shop.duckdb"
 	},
   // Configure tool-specific properties
+
+// will try and get away with 2 cpus but maybe during dev have 4
+  "hostRequirements": {
+    "cpus": 4,
+    "memory": "16gb",
+    "storage": "32gb"
+ }, 
   "customizations": {
     "vscode": {
       "settings": {
@@ -48,8 +55,8 @@
         "mechatroner.rainbow-csv",
         "evidence.evidence-vscode",
         "svelte.svelte-vscode",
-        "GitHub.copilot",
-        "GitHub.copilot-labs",
+        // "GitHub.copilot",
+        // "GitHub.copilot-labs",
         "innoverio.vscode-dbt-power-user",
         "bastienboutonnet.vscode-dbt",
         "eamodio.gitlens",
