--- a/dbt/models/staging/sources.yml
+++ b/dbt/models/staging/sources.yml
@@ -10,14 +10,14 @@ sources:
     schema: raw  
     tables:
       - name: raw_payments_py
-        meta:
-          dagster:
-            asset_key: ["raw_payments_py"] # This metadata specifies the corresponding Dagster asset for this dbt source.
+        # meta:
+        #   dagster:
+        #     asset_key: ["raw","raw_payments_py"] # This metadata specifies the corresponding Dagster asset for this dbt source.
       - name: raw_orders_py
-        meta:
-          dagster:
-            asset_key: ["raw_orders_py"] # This metadata specifies the corresponding Dagster asset for this dbt source.
+        # meta:
+        #   dagster:
+        #     asset_key: ["raw","raw_orders_py"] # This metadata specifies the corresponding Dagster asset for this dbt source.
       - name: raw_customers_py
-        meta:
-          dagster:
-            asset_key: ["raw_customers_py"] # This metadata specifies the corresponding Dagster asset for this dbt source.
+        # meta:
+        #   dagster:
+        #     asset_key: ["raw","raw_customers_py"] # This metadata specifies the corresponding Dagster asset for this dbt source.
