--- a/requirements.in
+++ b/requirements.in
@@ -9,3 +9,7 @@ duckdb==0.9.2 #currently supported duckdb version for motherduck
 dagster-dbt
 dagster-duckdb
 dagster-duckdb-pandas
+
+prophet
+scipy
+plotly
