--- a/dbt/dbt_project.yml
+++ b/dbt/dbt_project.yml
@@ -6,6 +6,10 @@ version: '0.1'
 profile: 'nsw_doe_data_stack_in_a_box_profile'
 # profile: 'my_dbt_trino_project'
 
+vars:
+  truncate_timespan_to: "{{ current_timestamp() }}"
+  "dbt_date:time_zone": "America/Los_Angeles"
+  
 model-paths: ["models"]
 seed-paths: ["seeds"]
 test-paths: ["tests"]
