--- a/requirements.in
+++ b/requirements.in
@@ -1,9 +1,10 @@
 dbt-duckdb
+dbt-metricflow[duckdb]
 
 dagster-webserver
 ipykernel
 
-duckdb==0.9.2 #currently supported duckdb version for motherduck
+duckdb==0.10.1 #currently supported duckdb version for motherduck
 
 # dagster deps
 dagster-dbt
