--- a/requirements.txt
+++ b/requirements.txt
@@ -6,8 +6,6 @@ alembic==1.13.1
     # via dagster
 aniso8601==9.0.1
     # via graphene
-annotated-types==0.6.0
-    # via pydantic
 anyio==4.3.0
     # via
     #   gql
@@ -37,6 +35,7 @@ click==8.1.7
     #   dagster-webserver
     #   dbt-core
     #   dbt-semantic-interfaces
+    #   metricflow
     #   mkdocs
     #   typer
     #   uvicorn
@@ -45,6 +44,8 @@ cmdstanpy==1.2.1
 colorama==0.4.6
     # via
     #   dbt-core
+    #   halo
+    #   log-symbols
     #   mkdocs-material
 coloredlogs==14.0
     # via dagster
@@ -76,18 +77,24 @@ dbt-core==1.7.9
     # via
     #   dagster-dbt
     #   dbt-duckdb
+    #   dbt-metricflow
+    #   metricflow
 dbt-duckdb==1.7.3
+    # via dbt-metricflow
 dbt-extractor==0.5.1
     # via dbt-core
+dbt-metricflow==0.6.0
 dbt-semantic-interfaces==0.4.4
-    # via dbt-core
+    # via
+    #   dbt-core
+    #   metricflow
 debugpy==1.8.1
     # via ipykernel
 decorator==5.1.1
     # via ipython
 docstring-parser==0.15
     # via dagster
-duckdb==0.9.2
+duckdb==0.10.1
     # via
     #   dagster-duckdb
     #   dbt-duckdb
@@ -110,6 +117,8 @@ graphql-core==3.2.3
     #   graphql-relay
 graphql-relay==3.2.0
     # via graphene
+graphviz==0.20.3
+    # via metricflow
 greenlet==3.0.3
     # via sqlalchemy
 grpcio==1.62.1
@@ -120,6 +129,8 @@ grpcio-health-checking==1.62.1
     # via dagster
 h11==0.14.0
     # via uvicorn
+halo==0.0.31
+    # via metricflow
 holidays==0.45
     # via prophet
 httptools==0.6.1
@@ -151,6 +162,7 @@ jinja2==3.1.3
     #   dagster-dbt
     #   dbt-core
     #   dbt-semantic-interfaces
+    #   metricflow
     #   mkdocs
     #   mkdocs-material
 jsonschema==4.21.1
@@ -169,6 +181,8 @@ kiwisolver==1.4.5
     # via matplotlib
 leather==0.4.0
     # via agate
+log-symbols==0.0.14
+    # via halo
 logbook==1.5.3
     # via dbt-core
 mako==1.3.2
@@ -197,6 +211,8 @@ mdurl==0.1.2
     # via markdown-it-py
 mergedeep==1.3.4
     # via mkdocs
+metricflow==0.205.0
+    # via dbt-metricflow
 minimal-snowplow-tracker==0.0.2
     # via dbt-core
 mkdocs==1.5.3
@@ -204,8 +220,10 @@ mkdocs==1.5.3
 mkdocs-material==9.5.14
 mkdocs-material-extensions==1.3.1
     # via mkdocs-material
-more-itertools==10.2.0
-    # via dbt-semantic-interfaces
+more-itertools==10.1.0
+    # via
+    #   dbt-semantic-interfaces
+    #   metricflow
 msgpack==1.0.8
     # via mashumaro
 multidict==6.0.5
@@ -238,10 +256,11 @@ packaging==24.0
     #   plotly
 paginate==0.5.6
     # via mkdocs-material
-pandas==2.0.3
+pandas==1.5.3
     # via
     #   cmdstanpy
     #   dagster-duckdb-pandas
+    #   metricflow
     #   prophet
 parsedatetime==2.6
     # via agate
@@ -278,12 +297,11 @@ pure-eval==0.2.2
     # via stack-data
 pycparser==2.21
     # via cffi
-pydantic==2.6.4
+pydantic==1.10.14
     # via
     #   dagster
     #   dbt-semantic-interfaces
-pydantic-core==2.16.3
-    # via pydantic
+    #   metricflow
 pygments==2.17.2
     # via
     #   ipython
@@ -293,7 +311,7 @@ pymdown-extensions==10.7.1
     # via mkdocs-material
 pyparsing==3.1.2
     # via matplotlib
-python-dateutil==2.9.0.post0
+python-dateutil==2.8.2
     # via
     #   croniter
     #   dagster
@@ -302,6 +320,7 @@ python-dateutil==2.9.0.post0
     #   holidays
     #   jupyter-client
     #   matplotlib
+    #   metricflow
     #   pandas
     #   pendulum
     #   time-machine
@@ -324,6 +343,7 @@ pyyaml==6.0.1
     #   dagster
     #   dbt-core
     #   dbt-semantic-interfaces
+    #   metricflow
     #   mkdocs
     #   pymdown-extensions
     #   pyyaml-env-tag
@@ -334,6 +354,8 @@ pyzmq==25.1.2
     # via
     #   ipykernel
     #   jupyter-client
+rapidfuzz==3.6.2
+    # via metricflow
 referencing==0.33.0
     # via
     #   jsonschema
@@ -350,6 +372,7 @@ requests==2.31.0
     #   minimal-snowplow-tracker
     #   mkdocs-material
     #   requests-toolbelt
+    #   update-checker
 requests-toolbelt==1.0.0
     # via gql
 rich==13.7.1
@@ -360,17 +383,24 @@ rpds-py==0.18.0
     # via
     #   jsonschema
     #   referencing
+ruamel-yaml==0.17.40
+    # via metricflow
+ruamel-yaml-clib==0.2.8
+    # via ruamel-yaml
 scipy==1.12.0
 setuptools==69.2.0
     # via dagster
 six==1.16.0
     # via
     #   asttokens
+    #   halo
     #   isodate
     #   minimal-snowplow-tracker
     #   python-dateutil
 sniffio==1.3.1
     # via anyio
+spinners==0.0.24
+    # via halo
 sqlalchemy==2.0.28
     # via
     #   alembic
@@ -388,9 +418,13 @@ starlette==0.37.2
 structlog==24.1.0
     # via dagster
 tabulate==0.9.0
-    # via dagster
+    # via
+    #   dagster
+    #   metricflow
 tenacity==8.2.3
     # via plotly
+termcolor==2.4.0
+    # via halo
 text-unidecode==1.3
     # via python-slugify
 time-machine==2.14.0
@@ -425,16 +459,16 @@ typing-extensions==4.10.0
     #   dbt-core
     #   dbt-semantic-interfaces
     #   mashumaro
+    #   metricflow
     #   pydantic
-    #   pydantic-core
     #   sqlalchemy
     #   typer
 tzdata==2024.1
-    # via
-    #   pandas
-    #   pendulum
+    # via pendulum
 universal-pathlib==0.2.2
     # via dagster
+update-checker==0.18.0
+    # via metricflow
 urllib3==1.26.18
     # via
     #   dbt-core
