--- a/dbt/models/semantic_models/orders.yml
+++ b/dbt/models/semantic_models/orders.yml
@@ -1,7 +1,7 @@
 semantic_models:
   - name: orders
     defaults:
-      agg_time_dimension: ordered_date
+      agg_time_dimension: order_date
     description: |
       Order fact table. This table is at the order grain with one row per order.
     model: ref('orders')
@@ -12,8 +12,8 @@ semantic_models:
         type: foreign
         expr: customer_id
     dimensions:
-      - name: ordered_date
-        expr: ordered_date
+      - name: order_date
+        expr: order_date
         type: time
         type_params:
           time_granularity: day
@@ -46,35 +46,35 @@ semantic_models:
         agg: median
         
 
-    metrics:
-      - name: orders
-        description: Sum of total order amonunt. Includes tax + revenue.
-        type: simple
-        label: Order Total
-        type_params:
-          measure: amount
-      - name: orders
-        description: Count of orders.
-        label: Orders
-        type: simple
-        type_params:
-          measure: order_count
+metrics:
+  - name: orders
+    description: Sum of total order amonunt. Includes tax + revenue.
+    type: simple
+    label: Order Total
+    type_params:
+      measure: orders
+  - name: orders
+    description: Count of orders.
+    label: Orders
+    type: simple
+    type_params:
+      measure: order_count
 
-  saved_queries:
-    - name: test_saved_query
-      description: test desc #"{{ doc('saved_query_description') }}"
-      label: Test saved query
-      query_params:
-          metrics:
-              - orders
-          group_by:
-              - "Dimension('status')"
-          where:
-              - "{{ Dimension('ordered_date', 'DAY') }} <= now()"
-              - "{{ Dimension('ordered_date', 'DAY') }} >= '2023-01-01'"
-      exports:
-          - name: my_export
-            config:
-              alias: my_export_alias
-              export_as: table
-              schema: my_export_schema_name
+saved_queries:
+  - name: test_saved_query
+    description: test desc
+    label: Test saved query
+    query_params:
+        metrics:
+            - orders
+        group_by:
+            - "Dimension('orders__status')"
+        where:
+            - "{{ Dimension('orders__order_date', 'DAY') }} <= now()"
+            - "{{ Dimension('orders__order_date', 'DAY') }} >= '2023-01-01'"
+    exports:
+        - name: my_export
+          config:
+            alias: my_export_alias
+            export_as: table
+            schema: my_export_schema_name
