--- a/requirements.txt
+++ b/requirements.txt
@@ -4,15 +4,27 @@ agate==1.7.1
     # via dbt-core
 alembic==1.13.1
     # via dagster
+altair==4.2.2
+    # via great-expectations
 aniso8601==9.0.1
     # via graphene
 anyio==4.3.0
     # via
     #   gql
+    #   httpx
+    #   jupyter-server
     #   starlette
     #   watchfiles
+argon2-cffi==23.1.0
+    # via jupyter-server
+argon2-cffi-bindings==21.2.0
+    # via argon2-cffi
+arrow==1.3.0
+    # via isoduration
 asttokens==2.4.1
     # via stack-data
+async-lru==2.0.4
+    # via jupyterlab
 attrs==23.2.0
     # via
     #   jsonschema
@@ -20,13 +32,24 @@ attrs==23.2.0
 babel==2.14.0
     # via
     #   agate
+    #   jupyterlab-server
     #   mkdocs-material
 backoff==2.2.1
     # via gql
+beautifulsoup4==4.12.3
+    # via nbconvert
+bleach==6.1.0
+    # via nbconvert
 certifi==2024.2.2
-    # via requests
+    # via
+    #   httpcore
+    #   httpx
+    #   requests
 cffi==1.16.0
-    # via dbt-core
+    # via
+    #   argon2-cffi-bindings
+    #   cryptography
+    #   dbt-core
 charset-normalizer==3.3.2
     # via requests
 click==8.1.7
@@ -35,7 +58,7 @@ click==8.1.7
     #   dagster-webserver
     #   dbt-core
     #   dbt-semantic-interfaces
-    #   metricflow
+    #   great-expectations
     #   mkdocs
     #   typer
     #   uvicorn
@@ -44,17 +67,20 @@ cmdstanpy==1.2.1
 colorama==0.4.6
     # via
     #   dbt-core
-    #   halo
-    #   log-symbols
+    #   great-expectations
     #   mkdocs-material
 coloredlogs==14.0
     # via dagster
 comm==0.2.2
-    # via ipykernel
+    # via
+    #   ipykernel
+    #   ipywidgets
 contourpy==1.2.0
     # via matplotlib
 croniter==2.0.2
     # via dagster
+cryptography==42.0.5
+    # via great-expectations
 cycler==0.12.1
     # via matplotlib
 dagster==1.6.11
@@ -62,14 +88,19 @@ dagster==1.6.11
     #   dagster-dbt
     #   dagster-duckdb
     #   dagster-duckdb-pandas
+    #   dagster-ge
     #   dagster-graphql
+    #   dagster-pandas
     #   dagster-webserver
 dagster-dbt==0.22.11
 dagster-duckdb==0.22.11
     # via dagster-duckdb-pandas
 dagster-duckdb-pandas==0.22.11
+dagster-ge==0.22.11
 dagster-graphql==1.6.11
     # via dagster-webserver
+dagster-pandas==0.22.11
+    # via dagster-ge
 dagster-pipes==1.6.11
     # via dagster
 dagster-webserver==1.6.11
@@ -77,31 +108,35 @@ dbt-core==1.7.9
     # via
     #   dagster-dbt
     #   dbt-duckdb
-    #   dbt-metricflow
-    #   metricflow
 dbt-duckdb==1.7.3
-    # via dbt-metricflow
 dbt-extractor==0.5.1
     # via dbt-core
-dbt-metricflow==0.6.0
 dbt-semantic-interfaces==0.4.4
-    # via
-    #   dbt-core
-    #   metricflow
+    # via dbt-core
 debugpy==1.8.1
     # via ipykernel
 decorator==5.1.1
     # via ipython
+defusedxml==0.7.1
+    # via nbconvert
 docstring-parser==0.15
     # via dagster
 duckdb==0.10.1
     # via
     #   dagster-duckdb
     #   dbt-duckdb
+entrypoints==0.4
+    # via
+    #   altair
+    #   nbconvert
 executing==2.0.1
     # via stack-data
+fastjsonschema==2.19.1
+    # via nbformat
 fonttools==4.50.0
     # via matplotlib
+fqdn==1.5.1
+    # via jsonschema
 fsspec==2024.2.0
     # via universal-pathlib
 ghp-import==2.1.0
@@ -117,8 +152,8 @@ graphql-core==3.2.3
     #   graphql-relay
 graphql-relay==3.2.0
     # via graphene
-graphviz==0.20.3
-    # via metricflow
+great-expectations==0.17.11
+    # via dagster-ge
 greenlet==3.0.3
     # via sqlalchemy
 grpcio==1.62.1
@@ -128,19 +163,25 @@ grpcio==1.62.1
 grpcio-health-checking==1.62.1
     # via dagster
 h11==0.14.0
-    # via uvicorn
-halo==0.0.31
-    # via metricflow
+    # via
+    #   httpcore
+    #   uvicorn
 holidays==0.45
     # via prophet
+httpcore==1.0.4
+    # via httpx
 httptools==0.6.1
     # via uvicorn
+httpx==0.27.0
+    # via jupyterlab
 humanfriendly==10.0
     # via coloredlogs
 idna==3.6
     # via
     #   anyio
     #   dbt-core
+    #   httpx
+    #   jsonschema
     #   requests
     #   yarl
 importlib-metadata==6.11.0
@@ -148,43 +189,102 @@ importlib-metadata==6.11.0
 importlib-resources==6.3.2
     # via prophet
 ipykernel==6.29.3
+    # via jupyterlab
 ipython==8.22.2
-    # via ipykernel
+    # via
+    #   great-expectations
+    #   ipykernel
+    #   ipywidgets
+ipywidgets==8.1.2
+    # via great-expectations
 isodate==0.6.1
     # via
     #   agate
     #   dbt-core
+isoduration==20.11.0
+    # via jsonschema
 jedi==0.19.1
     # via ipython
 jinja2==3.1.3
     # via
+    #   altair
     #   dagster
     #   dagster-dbt
     #   dbt-core
     #   dbt-semantic-interfaces
-    #   metricflow
+    #   great-expectations
+    #   jupyter-server
+    #   jupyterlab
+    #   jupyterlab-server
     #   mkdocs
     #   mkdocs-material
+    #   nbconvert
+json5==0.9.24
+    # via jupyterlab-server
+jsonpatch==1.33
+    # via great-expectations
+jsonpointer==2.4
+    # via
+    #   jsonpatch
+    #   jsonschema
 jsonschema==4.21.1
     # via
+    #   altair
     #   dbt-core
     #   dbt-semantic-interfaces
+    #   great-expectations
+    #   jupyter-events
+    #   jupyterlab-server
+    #   nbformat
 jsonschema-specifications==2023.12.1
     # via jsonschema
 jupyter-client==8.6.1
-    # via ipykernel
+    # via
+    #   ipykernel
+    #   jupyter-server
+    #   nbclient
 jupyter-core==5.7.2
     # via
     #   ipykernel
     #   jupyter-client
+    #   jupyter-server
+    #   jupyterlab
+    #   nbclient
+    #   nbconvert
+    #   nbformat
+jupyter-events==0.10.0
+    # via jupyter-server
+jupyter-lsp==2.2.4
+    # via jupyterlab
+jupyter-server==2.13.0
+    # via
+    #   jupyter-lsp
+    #   jupyterlab
+    #   jupyterlab-server
+    #   notebook
+    #   notebook-shim
+jupyter-server-terminals==0.5.3
+    # via jupyter-server
+jupyterlab==4.1.5
+    # via notebook
+jupyterlab-pygments==0.3.0
+    # via nbconvert
+jupyterlab-server==2.25.4
+    # via
+    #   jupyterlab
+    #   notebook
+jupyterlab-widgets==3.0.10
+    # via ipywidgets
 kiwisolver==1.4.5
     # via matplotlib
 leather==0.4.0
     # via agate
-log-symbols==0.0.14
-    # via halo
 logbook==1.5.3
     # via dbt-core
+lxml==5.1.0
+    # via nbconvert
+makefun==1.15.2
+    # via great-expectations
 mako==1.3.2
     # via alembic
 markdown==3.6
@@ -199,6 +299,9 @@ markupsafe==2.1.5
     #   jinja2
     #   mako
     #   mkdocs
+    #   nbconvert
+marshmallow==3.21.1
+    # via great-expectations
 mashumaro==3.12
     # via dbt-core
 matplotlib==3.8.3
@@ -211,33 +314,51 @@ mdurl==0.1.2
     # via markdown-it-py
 mergedeep==1.3.4
     # via mkdocs
-metricflow==0.205.0
-    # via dbt-metricflow
 minimal-snowplow-tracker==0.0.2
     # via dbt-core
+mistune==0.8.4
+    # via
+    #   great-expectations
+    #   nbconvert
 mkdocs==1.5.3
     # via mkdocs-material
 mkdocs-material==9.5.14
 mkdocs-material-extensions==1.3.1
     # via mkdocs-material
 more-itertools==10.1.0
-    # via
-    #   dbt-semantic-interfaces
-    #   metricflow
+    # via dbt-semantic-interfaces
 msgpack==1.0.8
     # via mashumaro
 multidict==6.0.5
     # via yarl
+nbclient==0.10.0
+    # via nbconvert
+nbconvert==6.5.4
+    # via jupyter-server
+nbformat==5.10.3
+    # via
+    #   great-expectations
+    #   jupyter-server
+    #   nbclient
+    #   nbconvert
 nest-asyncio==1.6.0
     # via ipykernel
 networkx==3.2.1
     # via
     #   dagster-dbt
     #   dbt-core
+notebook==7.1.2
+    # via great-expectations
+notebook-shim==0.2.4
+    # via
+    #   jupyterlab
+    #   notebook
 numpy==1.26.4
     # via
+    #   altair
     #   cmdstanpy
     #   contourpy
+    #   great-expectations
     #   matplotlib
     #   pandas
     #   prophet
@@ -245,23 +366,36 @@ numpy==1.26.4
     #   stanio
 orjson==3.9.15
     # via dagster-dbt
+overrides==7.7.0
+    # via jupyter-server
 packaging==24.0
     # via
     #   dagster
     #   dagster-dbt
     #   dbt-core
+    #   great-expectations
     #   ipykernel
+    #   jupyter-server
+    #   jupyterlab
+    #   jupyterlab-server
+    #   marshmallow
     #   matplotlib
     #   mkdocs
+    #   nbconvert
     #   plotly
 paginate==0.5.6
     # via mkdocs-material
 pandas==1.5.3
     # via
+    #   altair
     #   cmdstanpy
     #   dagster-duckdb-pandas
-    #   metricflow
+    #   dagster-ge
+    #   dagster-pandas
+    #   great-expectations
     #   prophet
+pandocfilters==1.5.1
+    # via nbconvert
 parsedatetime==2.6
     # via agate
 parso==0.8.3
@@ -281,6 +415,8 @@ platformdirs==4.2.0
     #   jupyter-core
     #   mkdocs
 plotly==5.20.0
+prometheus-client==0.20.0
+    # via jupyter-server
 prompt-toolkit==3.0.43
     # via ipython
 prophet==1.1.5
@@ -292,7 +428,9 @@ protobuf==4.25.3
 psutil==5.9.8
     # via ipykernel
 ptyprocess==0.7.0
-    # via pexpect
+    # via
+    #   pexpect
+    #   terminado
 pure-eval==0.2.2
     # via stack-data
 pycparser==2.21
@@ -301,26 +439,30 @@ pydantic==1.10.14
     # via
     #   dagster
     #   dbt-semantic-interfaces
-    #   metricflow
+    #   great-expectations
 pygments==2.17.2
     # via
     #   ipython
     #   mkdocs-material
+    #   nbconvert
     #   rich
 pymdown-extensions==10.7.1
     # via mkdocs-material
-pyparsing==3.1.2
-    # via matplotlib
+pyparsing==2.4.7
+    # via
+    #   great-expectations
+    #   matplotlib
 python-dateutil==2.8.2
     # via
+    #   arrow
     #   croniter
     #   dagster
     #   dbt-semantic-interfaces
     #   ghp-import
+    #   great-expectations
     #   holidays
     #   jupyter-client
     #   matplotlib
-    #   metricflow
     #   pandas
     #   pendulum
     #   time-machine
@@ -328,6 +470,8 @@ python-dotenv==1.0.1
     # via
     #   dagster
     #   uvicorn
+python-json-logger==2.0.7
+    # via jupyter-events
 python-slugify==8.0.4
     # via agate
 pytimeparse==1.1.8
@@ -337,13 +481,14 @@ pytz==2024.1
     #   croniter
     #   dagster
     #   dbt-core
+    #   great-expectations
     #   pandas
 pyyaml==6.0.1
     # via
     #   dagster
     #   dbt-core
     #   dbt-semantic-interfaces
-    #   metricflow
+    #   jupyter-events
     #   mkdocs
     #   pymdown-extensions
     #   pyyaml-env-tag
@@ -354,12 +499,12 @@ pyzmq==25.1.2
     # via
     #   ipykernel
     #   jupyter-client
-rapidfuzz==3.6.2
-    # via metricflow
+    #   jupyter-server
 referencing==0.33.0
     # via
     #   jsonschema
     #   jsonschema-specifications
+    #   jupyter-events
 regex==2023.12.25
     # via mkdocs-material
 requests==2.31.0
@@ -369,12 +514,21 @@ requests==2.31.0
     #   dagster-graphql
     #   dbt-core
     #   gql
+    #   great-expectations
+    #   jupyterlab-server
     #   minimal-snowplow-tracker
     #   mkdocs-material
     #   requests-toolbelt
-    #   update-checker
 requests-toolbelt==1.0.0
     # via gql
+rfc3339-validator==0.1.4
+    # via
+    #   jsonschema
+    #   jupyter-events
+rfc3986-validator==0.1.1
+    # via
+    #   jsonschema
+    #   jupyter-events
 rich==13.7.1
     # via
     #   dagster
@@ -383,24 +537,28 @@ rpds-py==0.18.0
     # via
     #   jsonschema
     #   referencing
-ruamel-yaml==0.17.40
-    # via metricflow
-ruamel-yaml-clib==0.2.8
-    # via ruamel-yaml
+ruamel-yaml==0.17.17
+    # via great-expectations
 scipy==1.12.0
+    # via great-expectations
+send2trash==1.8.2
+    # via jupyter-server
 setuptools==69.2.0
     # via dagster
 six==1.16.0
     # via
     #   asttokens
-    #   halo
+    #   bleach
     #   isodate
     #   minimal-snowplow-tracker
     #   python-dateutil
+    #   rfc3339-validator
 sniffio==1.3.1
-    # via anyio
-spinners==0.0.24
-    # via halo
+    # via
+    #   anyio
+    #   httpx
+soupsieve==2.5
+    # via beautifulsoup4
 sqlalchemy==2.0.28
     # via
     #   alembic
@@ -418,60 +576,81 @@ starlette==0.37.2
 structlog==24.1.0
     # via dagster
 tabulate==0.9.0
-    # via
-    #   dagster
-    #   metricflow
+    # via dagster
 tenacity==8.2.3
     # via plotly
-termcolor==2.4.0
-    # via halo
+terminado==0.18.1
+    # via
+    #   jupyter-server
+    #   jupyter-server-terminals
 text-unidecode==1.3
     # via python-slugify
 time-machine==2.14.0
     # via pendulum
+tinycss2==1.2.1
+    # via nbconvert
 tomli==2.0.1
     # via dagster
+toolz==0.12.1
+    # via altair
 toposort==1.10
     # via dagster
 tornado==6.4
     # via
     #   ipykernel
     #   jupyter-client
+    #   jupyter-server
+    #   jupyterlab
+    #   notebook
+    #   terminado
 tqdm==4.66.2
     # via
     #   cmdstanpy
     #   dagster
+    #   great-expectations
     #   prophet
 traitlets==5.14.2
     # via
     #   comm
     #   ipykernel
     #   ipython
+    #   ipywidgets
     #   jupyter-client
     #   jupyter-core
+    #   jupyter-events
+    #   jupyter-server
+    #   jupyterlab
     #   matplotlib-inline
+    #   nbclient
+    #   nbconvert
+    #   nbformat
 typer==0.9.0
     # via dagster-dbt
+types-python-dateutil==2.9.0.20240316
+    # via arrow
 typing-extensions==4.10.0
     # via
     #   alembic
     #   dagster
     #   dbt-core
     #   dbt-semantic-interfaces
+    #   great-expectations
     #   mashumaro
-    #   metricflow
     #   pydantic
     #   sqlalchemy
     #   typer
 tzdata==2024.1
     # via pendulum
+tzlocal==5.2
+    # via great-expectations
 universal-pathlib==0.2.2
     # via dagster
-update-checker==0.18.0
-    # via metricflow
+uri-template==1.3.0
+    # via jsonschema
 urllib3==1.26.18
     # via
     #   dbt-core
+    #   great-expectations
     #   requests
 uvicorn==0.28.0
     # via dagster-webserver
@@ -485,8 +664,18 @@ watchfiles==0.21.0
     # via uvicorn
 wcwidth==0.2.13
     # via prompt-toolkit
+webcolors==1.13
+    # via jsonschema
+webencodings==0.5.1
+    # via
+    #   bleach
+    #   tinycss2
+websocket-client==1.7.0
+    # via jupyter-server
 websockets==12.0
     # via uvicorn
+widgetsnbextension==4.0.10
+    # via ipywidgets
 yarl==1.9.4
     # via gql
 zipp==3.18.0
