--- a/reports/package.json
+++ b/reports/package.json
@@ -19,8 +19,7 @@
     "@evidence-dev/core-components": "^3.5.1",
     "@evidence-dev/csv": "^1.0.7",
     "@evidence-dev/duckdb": "^1.0.7",
-    "@evidence-dev/evidence": "^29.0.2",
-    "@duckdb-async": "^0.10.0"
+    "@evidence-dev/evidence": "^29.0.2"
   },
   "overrides": {
     "jsonwebtoken": "9.0.0",
