dbt saved query added to demo metrics from dbt semantic layer

--- a/dbt/models/semantic_models/orders.yml
+++ b/dbt/models/semantic_models/orders.yml
@@ -61,20 +61,20 @@ metrics:
     type_params:
       measure: order_count
 
-## saved queries node is causing issues with dagster 🚧 TODO
-# saved_queries:
-#   - name: test_saved_query
-#     description: test desc
-#     label: Test saved query
-#     query_params:
-#         metrics:
-#             - orders
-#         group_by:
-#             - "Dimension('order__status')"
-#         where:
-#             - "{{ Dimension('order__status') }} != 'Dave'"
-#             # - "{{ Dimension('order__order_date', 'DAY') }} <= now()"
-#         #     - "{{ Dimension('order__order_date', 'DAY') }} >= '2023-01-01'"
+saved_queries:
+  - name: orders_saved_query
+    description: test desc
+    label: Test saved query
+    query_params:
+        metrics:
+            - orders
+        group_by:
+            - "Dimension('order__status')"
+        where:
+            - "{{ Dimension('order__status') }} != 'Dave'"
+            # - "{{ Dimension('order__order_date', 'DAY') }} <= now()"
+        #     - "{{ Dimension('order__order_date', 'DAY') }} >= '2023-01-01'"
+# #   TODO exports only possible with dbt cloud testing
 #     exports:
 #         - name: my_export
 #           config:
